test/good/dictionaries/dict01.px

d = {'a': 1, 'c': 3, 'e': 5}
print d['c']
