test/bad/dictionaries/cmp03.px

d = {3: readLine}
d == d
